update module-info and add private dns